# certificator

./: Cargo.toml  README.md
docs/: FEATURES.md
src/: database.rs  main.rs  ui_main.rs  utils.rs
src/models/: mod.rs
src/ui_main/: import_window.rs  ui_certlist.rs  ui_menu.rs  ui_viewcert.rs
