[package]
name = "certificator"
version = "0.1.0"
authors = ["Denis Subbotin <denis@subbot.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]


[dependencies.gio]
version = "0.7.0"
features = ["v2_56"]
