[package]
name = "certificator"
version = "0.1.0"
authors = ["Denis Subbotin <denis@subbot.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.20.0"
pem = "0.5.1"
webpki = "0.21.0"
x509-parser = "0.6.0"
"ring" = "0.16.9"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]


[dependencies.gio]
version = "0.7.0"
features = ["v2_56"]
